@@ -1,3 +1,4 @@
+Spannungsteiler Verhaeltnis für Batteriespannung und Zener-Spannung in config.h und Makefile aenderbar.
 1.09 / 30.11.2013
 Beseitigung des Ueberlaufproblems bei der Ladezeitmessung in ReadCapacity mit Sleep Mode.
 Die Art der Zaehler-Ueberlaufbehandlung in ReadCapacity mit Sleep Mode geaendert.
